--- a/SignUp.html
+++ b/SignUp.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sign Up | Foodie</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <style>
       body {
