--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
 
             }
     </style>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
 
   </head>
