--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1 class="h-primary">Best food delivered at your doorstep</h1>
         <p>Eat what you like, where you like, when you like. </p>
         <p> Get the food you want, from the restaurants you love.</p>
-        <button class="btn">Order Now</button>
+        <button class="btn"><a href="SignUp.html">Order Now</a></button>
     </section>
 
    <section id="services-container">
